# snippets-code-t

./: .eslintignore  .eslintrc-auto-import.json  .eslintrc.cjs  .gitignore  .node-version  .prettierignore  .prettierrc.cjs  .stylelintignore  .stylelintrc.cjs  AGENTS.md  CHANGELOG_COMPARISON.md  COMMIT_GUIDE.md  DATABASE_MIGRATION_NOTES.md  GITHUB_SYNC_GUIDE.md  README.md  RELEASE_NOTES.md  UPDATE_GUIDE.md  commitlint.config.cjs  database-migration-fix.md  git-commit-guide.md  index.html  latest.json  ocr-layout-preview.html  package.json  pnpm-lock.yaml  solution-from-github.md  tailwind.config.js  tsconfig.json  vite.config.ts
.catpaw/: preview.yml
.github/workflows/: ci.yml  guide.yaml  publish.yaml  publish.yml  release.yaml  release.yml
.husky/: pre-commit
docs/: ARCHITECTURE.md  CODING_STANDARDS.md  ENGINEERING_PRIORITY_PROGRESS.md  FRONTEND_DEVELOPER_PRODUCT_REVIEW.md  OFFICIAL_PLUGIN_DEVELOPMENT.md  PLUGIN_SYSTEM.md  WINDOW_CONTENT_FIT_AND_PASSTHROUGH.md
docs/examples/screen-recorder-ffmpeg-resource/: plugin.json
docs/examples/screenshot-rapidocr-resource/: README.md  plugin.json
docs/examples/translation-offline-runtime/: plugin.json
docs/plugin-marketplace/: marketplace.json
docs/plugin-packages/: README.md
docs/plugin-packages/desktop-files/: plugin.json
docs/plugin-packages/git-sync/: plugin.json
docs/plugin-packages/local-ai/: README.md  plugin.json
docs/plugin-packages/local-ai-agent-reach-runtime/: README.md  plugin.json
docs/plugin-packages/local-launcher/: plugin.json
docs/plugin-packages/quick-tools/: README.md  plugin.json
docs/plugin-packages/screen-recorder/: README.md  plugin.json
docs/plugin-packages/screenshot/: plugin.json
docs/plugin-packages/search-engines/: plugin.json
docs/plugin-packages/system-theme/: plugin.json
docs/plugin-packages/todo/: plugin.json
docs/plugin-packages/translation/: plugin.json
docs/plugin-packages/wallpaper-switcher/: README.md  plugin.json
native/taskbar-transparency-agent/: Cargo.toml  README.md
native/taskbar-transparency-agent/src/: lib.rs
plugin-registry/: README.md
plugin-registry/examples/hello-local-plugin/: README.md  plugin.json
plugin-registry/examples/screen-recorder-ffmpeg-resource/: README.md  plugin.json
plugin-registry/marketplace/: marketplace.json
scripts/: build-official-plugin-runtimes.mjs  cleanup-old-assets.mjs  format-release-notes.mjs  install-ffmpeg.mjs  install-rapidocr.mjs  package-agent-reach-runtime-plugin.mjs  package-ffmpeg-plugin.mjs  package-official-plugins.mjs  package-rapidocr-plugin.mjs  plugin-release-config.mjs  plugin-tag.mjs  rename-installer.mjs  smoke-screen-recorder.mjs  sync-plugin-repositories.mjs  tag.mjs  updater.mjs  upload-assets.mjs  verify-plugin-marketplace.mjs  verify-release-versions.mjs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  build.rs  installer.nsh  tauri.conf.json
src-tauri/assets/: default_engines.json
src-tauri/capabilities/: default.json  desktop.json  main.json
src-tauri/icons/: icon.icns
src-tauri/resources/ffmpeg/: README.md
src-tauri/resources/rapidocr/: README.md
src-tauri/src/: alarm.rs  app_config.rs  app_setup.rs  apps.rs  attachment.rs  bookmarks.rs  cache.rs  config.rs  dark_mode.rs  db.rs  desktop_watcher.rs  git_common.rs  git_sync.rs  github_sync.rs  hotkey.rs  icon.rs  icon_cache.rs  json_config.rs  lib.rs  main.rs  migrate.rs  ocr.rs  search.rs  translation.rs  tray.rs  update.rs  window.rs
src-tauri/src/commands/: diagnostics.rs  file_system.rs  mod.rs  workspace.rs
src-tauri/src/db/: alarm.rs  apps.rs  bookmarks.rs  connection.rs  database.rs  desktop_files.rs  entity.rs  fragment.rs  icon_cache.rs  init.rs  mod.rs  search_engines.rs  search_history.rs  settings.rs
src-tauri/src/markdown/: cache_manager.rs  commands.rs  file_ops.rs  file_system_manager.rs  index_optimized.rs  metadata.rs  migration.rs  mod.rs  watcher.rs  workspace.rs  workspace_manager.rs
src-tauri/src/plugins/: desktop_files.rs  local_ai.rs  local_launcher.rs  mod.rs  screen_recorder.rs  screenshot.rs  search_engines.rs  shared.rs  system_theme.rs  todo.rs  translation.rs  wallpaper_switcher.rs
src/api/: appConfig.ts  developerDiagnostics.ts  fragment.ts  git.ts  gitSync.ts  github.ts  localAi.ts  markdown.ts  plugins.ts
src/composables/: useFragmentRag.ts
src/database/: category.ts  fragment.ts  history.ts  index.ts  search.ts
src/hooks/: searchRanking.test.ts  searchRanking.ts  useContextMenu.ts  useFileWatcher.ts  useFitWindowToElement.ts  useFocusMode.ts  useGitStatus.ts  useSearch.ts  useSetIgnoreCursorEvents.ts  windowContentSizing.test.ts  windowContentSizing.ts
src/i18n/: index.ts
src/layout/: index.vue
src/plugins/: host-components.ts  hotkeys.ts  index.ts  loader.ts  navigation.ts  official-mode.ts  official-runtime.ts  permissions.test.ts  permissions.ts  protocol.ts  registry.ts  routes.ts  runtime.ts  search-providers.ts  search.ts  settings.ts  titlebar.ts  types.ts  windows.ts
src/router/: index.ts
src/store/: hotkeys.ts  index.ts  layout.ts  plugins.ts  theme.ts
src/styles/: index.scss  reset.scss  theme.scss
src/types/: api.ts  auto-imports.d.ts  components.d.ts  components.ts  database.ts  global.d.ts  index.ts  models.ts  router.d.ts  store.d.ts  vue-virtual-scroller.d.ts
src/utils/: app-init.ts  debounced-handler.ts  developer-diagnostics.test.ts  developer-diagnostics.ts  env.ts  error-handler.ts  error-messages.ts  errorHandler.ts  file-open.ts  file-sort.ts  file-system.ts  filterEngine.test.ts  filterEngine.ts  format.ts  fragment.ts  git-error.ts  html-sanitize.ts  image-upload.ts  index.ts  localAiAttachments.test.ts  localAiAttachments.ts  logger.ts  modal.ts  ocr.ts  offlineTranslator.ts  search-engines.ts  searchParser.test.ts  searchParser.ts  snippetCopyFormats.test.ts  snippetCopyFormats.ts  snippetMetadataInference.test.ts  snippetMetadataInference.ts  templateInputResolver.test.ts  templateInputResolver.ts  templateParser.ts  text.ts  theme-sync.ts  theme.ts  time-format.ts  type-guards.ts  (+6 more)
src/workers/: ocr.worker.ts
(+359 files in other folders)
