[package]
name = "snippets-code"
version = "0.0.1"
description = "programmer's Efficiency Tool"
authors = ["GigaPuddings"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-notification = "2"
tauri-plugin-log = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-autostart = "2.0.0"
tauri-plugin-http = "2"
rusqlite = { version = "0.32.1", features = ["backup"] }
windows = { version = "0.59", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus"
] }
log = "0.4"
mouse_position = "0.1.4"
tauri-plugin-shell = "2"
winreg = "0.55.0"
regex = "1.11.1"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
glob = "0.3.1"
base64 = "0.21"
lazy_static = "1.4.0"
urlencoding = "2.1.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"

[dependencies.tauri-plugin-sql]
features = ["sqlite"]
version = "2.0.0"
