[package]
name = "snippets-code"
version = "0.2.0"
description = "程序员效率助手，包含翻译、搜索、代码片段管理等功能"
authors = ["GigaPuddings"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "protocol-asset", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-log = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-autostart = "2.0.0"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.32.1", features = ["backup"] }
windows = { version = "0.59", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_Storage_FileSystem",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_DataExchange",
    "Win32_System_Memory"
] }
log = "0.4"
mouse_position = "0.1.4"
winreg = "0.55.0"
regex = "1.11.1"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
glob = "0.3.1"
base64 = "0.21"
url = "2.5.4"
lazy_static = "1.4.0"
urlencoding = "2.1.3"
once_cell = "1.19.0"
tokio = { version = "1.36.0", features = ["rt", "time"] }
futures = "0.3"
image = "0.24.7"
lru = "0.12.5"
png = "0.17.16"
fuzzy-matcher = "0.3.7"
pinyin = "0.10"
xml-rs = "0.8.25"
selection = "1.2.0"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-prevent-default = "4"
aes-gcm = "0.10"
sha2 = "0.10"
hex = "0.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2.3.6"
tauri-plugin-updater = "2"

[dependencies.tauri-plugin-sql]
features = ["sqlite"]
version = "2.0.0"
