[package]
name = "snippets-code"
version = "2.1.32"
description = "程序员效率助手，包含翻译、搜索、代码片段管理等功能"
authors = ["GigaPuddings"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.3", features = [ "protocol-asset", "tray-icon"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tauri-plugin-opener = "2.5.4"
tauri-plugin-notification = "2.3.3"
tauri-plugin-log = "2.8.0"
tauri-plugin-os = "2.3.2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-http = "2.5.9"
tauri-plugin-shell = "2.3.5"
reqwest = { version = "0.13.4", features = ["json", "query", "stream", "native-tls", "gzip", "brotli", "deflate"] }
rusqlite = { version = "0.32.1", features = ["backup"] }
log = "0.4.33"
regex = "1.12.4"
uuid = { version = "1.23.4", features = ["v4"] }
chrono = { version = "0.4.45", features = ["serde"] }
dirs = "6.0.0"
glob = "0.3.3"
base64 = "0.22.1"
url = "2.5.8"
lazy_static = "1.5.0"
urlencoding = "2.1.3"
once_cell = "1.21.4"
tokio = { version = "1.52.3", features = ["rt", "time"] }
futures = "0.3.32"
image = "0.25.10"
lru = "0.18.0"
png = "0.18.1"
fuzzy-matcher = "0.3.7"
pinyin = "0.11.0"
xml-rs = "1.0.0"
selection = "1.2.0"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-prevent-default = "5.0.2"
aes-gcm = "0.11.0"
sha2 = "0.11.0"
hex = "0.4.3"
serde_yaml = "0.9.34"
walkdir = "2.5.0"
notify = "8.2.0"
jieba-rs = "0.10.1"
rayon = "1.12.0"
pathdiff = "0.2.3"
pulldown-cmark = { version = "0.13.4", features = ["html"] }
pulldown-cmark-toc = "0.7.0"
lopdf = "0.42.0"
zip = "8.6.0"
scraper = "0.27.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-updater = "2.10.1"

windows = { version = "0.62.2", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi",
    "Win32_Media_Audio",
    "Win32_Media_Multimedia",
    "Win32_Storage_FileSystem",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_DataExchange",
    "Win32_System_Memory"
] }
winreg = "0.56.0"

[dependencies.tauri-plugin-sql]
features = ["sqlite"]
version = "2.4.0"

[dev-dependencies]
tempfile = "3.27.0"
