[package]
name = "taskbar-transparency-agent"
version = "0.1.0"
edition = "2021"
publish = false
license = "GPL-3.0-or-later"

[lib]
name = "taskbar_transparency_agent"
crate-type = ["cdylib"]

[dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging"
] }
